infra/network.tf
# Building Main VPC + tags allow to be used across the project to refer to the project name and managed by terraform
# i.e it-tools-vpc, it-tools-subnet, it-tools-ecs-cluster, etc

resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-vpc"
    }
  )
}

# Public Subnet - eu-west-2a
resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "eu-west-2a"
  map_public_ip_on_launch = true # Required for public subnets to automatically assign public IPs to instances launched in this subnet

  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-public-a"
    }
  )
}

# Public Subnet - eu-west-2b
resource "aws_subnet" "public_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "eu-west-2b"
  map_public_ip_on_launch = true

  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-public-b"
    }
  )
}

# Private subnet - eu-west-2a
resource "aws_subnet" "private_a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.11.0/24"
  availability_zone = "eu-west-2a"

  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-private-a"
    }
  )
}

# Private subnet - eu-west-2b
resource "aws_subnet" "private_b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.12.0/24"
  availability_zone = "eu-west-2b"

  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-private-b"
    }
  )
}

# Internet Gateway - Gives VPC access to the internet for public subnets, 
# allowing instances in public subnets to communicate with the internet
resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id

    tags = merge(
        local.common_tags,
        {
            Name = "${local.project_name}-igw"
        }
    )
}

# Public route table - routing for public subnets to the internet gateway
resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }

    tags = merge(
        local.common_tags,
        {
            Name = "${local.project_name}-public-rt"
        }
    )
}

# Associate public subnets with the public route table
resource "aws_route_table_association" "public_a" {
    subnet_id      = aws_subnet.public_a.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b" {
    subnet_id      = aws_subnet.public_b.id
    route_table_id = aws_route_table.public.id
}
